// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatToLiquidityHub > calculates user yearly earnings from the user supply balance USD mantissa 1`] = `
{
  "liquidityCents": "10000",
  "liquidityTokens": "100",
  "performanceFeePercentage": "0",
  "pricePerShare": "1",
  "redeemFeePercentage": "0",
  "supplierCount": 1,
  "supplyApyPercentage": "5",
  "supplyBalanceCents": "20000",
  "supplyBalanceTokens": "200",
  "supplyCapTokens": "1000",
  "supplyTokenDistributions": [],
  "tokenPriceCents": "100",
  "tokenPriceOracleAddress": "0x2000000000000000000000000000000000000001",
  "userSupplyBalanceCents": "10000",
  "userSupplyBalanceTokens": undefined,
  "userSupplyCapTokens": undefined,
  "userVhTokenBalanceTokens": undefined,
  "userVhTokenMaxRedeemTokens": undefined,
  "userWalletBalanceCents": undefined,
  "userWalletBalanceTokens": undefined,
  "userWithdrawCapTokens": undefined,
  "userYearlyEarningsCents": "500",
  "vhToken": {
    "address": "0x1000000000000000000000000000000000000001",
    "chainId": 97,
    "decimals": 18,
    "symbol": "vhUSDC",
    "underlyingToken": {
      "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
      "chainId": 97,
      "decimals": 6,
      "iconSrc": "fake-usdc-asset",
      "symbol": "USDC",
    },
  },
  "withdrawCapTokens": "100",
  "yieldGroups": [],
}
`;

exports[`formatToLiquidityHub > does not calculate user yearly earnings without a user supply balance 1`] = `
{
  "liquidityCents": "10000",
  "liquidityTokens": "100",
  "performanceFeePercentage": "0",
  "pricePerShare": "1",
  "redeemFeePercentage": "0",
  "supplierCount": 1,
  "supplyApyPercentage": "5",
  "supplyBalanceCents": "20000",
  "supplyBalanceTokens": "200",
  "supplyCapTokens": "1000",
  "supplyTokenDistributions": [],
  "tokenPriceCents": "100",
  "tokenPriceOracleAddress": "0x2000000000000000000000000000000000000001",
  "userSupplyBalanceCents": undefined,
  "userSupplyBalanceTokens": undefined,
  "userSupplyCapTokens": undefined,
  "userVhTokenBalanceTokens": undefined,
  "userVhTokenMaxRedeemTokens": undefined,
  "userWalletBalanceCents": undefined,
  "userWalletBalanceTokens": undefined,
  "userWithdrawCapTokens": undefined,
  "userYearlyEarningsCents": undefined,
  "vhToken": {
    "address": "0x1000000000000000000000000000000000000001",
    "chainId": 97,
    "decimals": 18,
    "symbol": "vhUSDC",
    "underlyingToken": {
      "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
      "chainId": 97,
      "decimals": 6,
      "iconSrc": "fake-usdc-asset",
      "symbol": "USDC",
    },
  },
  "withdrawCapTokens": "100",
  "yieldGroups": [],
}
`;

exports[`formatToLiquidityHub > falls back to the token balance and token price 1`] = `
{
  "liquidityCents": "10000",
  "liquidityTokens": "100",
  "performanceFeePercentage": "0",
  "pricePerShare": "1",
  "redeemFeePercentage": "0",
  "supplierCount": 1,
  "supplyApyPercentage": "5",
  "supplyBalanceCents": "20000",
  "supplyBalanceTokens": "200",
  "supplyCapTokens": "1000",
  "supplyTokenDistributions": [],
  "tokenPriceCents": "100",
  "tokenPriceOracleAddress": "0x2000000000000000000000000000000000000001",
  "userSupplyBalanceCents": "10000",
  "userSupplyBalanceTokens": "100",
  "userSupplyCapTokens": undefined,
  "userVhTokenBalanceTokens": undefined,
  "userVhTokenMaxRedeemTokens": undefined,
  "userWalletBalanceCents": undefined,
  "userWalletBalanceTokens": undefined,
  "userWithdrawCapTokens": undefined,
  "userYearlyEarningsCents": "500",
  "vhToken": {
    "address": "0x1000000000000000000000000000000000000001",
    "chainId": 97,
    "decimals": 18,
    "symbol": "vhUSDC",
    "underlyingToken": {
      "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
      "chainId": 97,
      "decimals": 6,
      "iconSrc": "fake-usdc-asset",
      "symbol": "USDC",
    },
  },
  "withdrawCapTokens": "100",
  "yieldGroups": [],
}
`;

exports[`formatToLiquidityHub > formats a Liquidity Hub 1`] = `
{
  "liquidityCents": "10000",
  "liquidityTokens": "100",
  "performanceFeePercentage": "0",
  "pricePerShare": "1",
  "redeemFeePercentage": "0",
  "supplierCount": 1,
  "supplyApyPercentage": "5",
  "supplyBalanceCents": "20000",
  "supplyBalanceTokens": "200",
  "supplyCapTokens": "1000",
  "supplyTokenDistributions": [],
  "tokenPriceCents": "100",
  "tokenPriceOracleAddress": "0x2000000000000000000000000000000000000001",
  "userSupplyBalanceCents": undefined,
  "userSupplyBalanceTokens": undefined,
  "userSupplyCapTokens": undefined,
  "userVhTokenBalanceTokens": undefined,
  "userVhTokenMaxRedeemTokens": undefined,
  "userWalletBalanceCents": undefined,
  "userWalletBalanceTokens": undefined,
  "userWithdrawCapTokens": undefined,
  "userYearlyEarningsCents": undefined,
  "vhToken": {
    "address": "0x1000000000000000000000000000000000000001",
    "chainId": 97,
    "decimals": 18,
    "symbol": "vhUSDC",
    "underlyingToken": {
      "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
      "chainId": 97,
      "decimals": 6,
      "iconSrc": "fake-usdc-asset",
      "symbol": "USDC",
    },
  },
  "withdrawCapTokens": "100",
  "yieldGroups": [],
}
`;

exports[`formatToLiquidityHub > formats user-specific supply and withdrawal caps 1`] = `
{
  "liquidityCents": "10000",
  "liquidityTokens": "100",
  "performanceFeePercentage": "0",
  "pricePerShare": "1",
  "redeemFeePercentage": "0",
  "supplierCount": 1,
  "supplyApyPercentage": "5",
  "supplyBalanceCents": "20000",
  "supplyBalanceTokens": "200",
  "supplyCapTokens": "1000",
  "supplyTokenDistributions": [],
  "tokenPriceCents": "100",
  "tokenPriceOracleAddress": "0x2000000000000000000000000000000000000001",
  "userSupplyBalanceCents": undefined,
  "userSupplyBalanceTokens": undefined,
  "userSupplyCapTokens": "250",
  "userVhTokenBalanceTokens": undefined,
  "userVhTokenMaxRedeemTokens": "125",
  "userWalletBalanceCents": undefined,
  "userWalletBalanceTokens": undefined,
  "userWithdrawCapTokens": "75",
  "userYearlyEarningsCents": undefined,
  "vhToken": {
    "address": "0x1000000000000000000000000000000000000001",
    "chainId": 97,
    "decimals": 18,
    "symbol": "vhUSDC",
    "underlyingToken": {
      "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
      "chainId": 97,
      "decimals": 6,
      "iconSrc": "fake-usdc-asset",
      "symbol": "USDC",
    },
  },
  "withdrawCapTokens": "100",
  "yieldGroups": [],
}
`;

exports[`formatToLiquidityHub > formats yield groups 1`] = `
{
  "liquidityCents": "125000",
  "liquidityTokens": "500",
  "performanceFeePercentage": "10",
  "pricePerShare": "1.02",
  "redeemFeePercentage": "1",
  "supplierCount": 2,
  "supplyApyPercentage": "5",
  "supplyBalanceCents": "250000",
  "supplyBalanceTokens": "1000",
  "supplyCapTokens": "2000",
  "supplyTokenDistributions": [
    {
      "apyPercentage": "1",
      "dailyDistributedTokens": "864",
      "isActive": true,
      "rewardDetails": undefined,
      "token": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
      "type": "venus",
    },
  ],
  "tokenPriceCents": "250",
  "tokenPriceOracleAddress": "0x4000000000000000000000000000000000000001",
  "userSupplyBalanceCents": undefined,
  "userSupplyBalanceTokens": undefined,
  "userSupplyCapTokens": undefined,
  "userVhTokenBalanceTokens": undefined,
  "userVhTokenMaxRedeemTokens": undefined,
  "userWalletBalanceCents": undefined,
  "userWalletBalanceTokens": undefined,
  "userWithdrawCapTokens": undefined,
  "userYearlyEarningsCents": undefined,
  "vhToken": {
    "address": "0x2000000000000000000000000000000000000001",
    "chainId": 97,
    "decimals": 6,
    "symbol": "vhUSDC",
    "underlyingToken": {
      "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
      "chainId": 97,
      "decimals": 6,
      "iconSrc": "fake-usdc-asset",
      "symbol": "USDC",
    },
  },
  "withdrawCapTokens": "500",
  "yieldGroups": [
    {
      "address": "0x5000000000000000000000000000000000000001",
      "allocationCapPercentage": "40",
      "allocationCents": "100000",
      "allocationTokens": "400",
      "averageSupplyApyPercentage": "4",
      "bgClassName": "bg-blue",
      "iconSrc": "/src/assets/img/venusCoreIcon.png",
      "liquidityCents": "75000",
      "liquidityTokens": "300",
      "nameTranslationKey": "liquidityHub.allocationDetails.yieldGroup.names.core",
      "paused": false,
      "sources": [
        {
          "address": "0x6000000000000000000000000000000000000001",
          "allocationCents": "100000",
          "allocationTokens": "400",
          "collaterals": [
            {
              "liquidationThresholdPercentage": "60",
              "token": {
                "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
                "chainId": 97,
                "decimals": 18,
                "iconSrc": "fake-xvs-asset",
                "symbol": "XVS",
              },
            },
          ],
          "liquidityCents": "75000",
          "liquidityTokens": "300",
          "lockEndDate": undefined,
          "name": "Core market",
          "supplyApyPercentage": "4",
          "supplyCapCents": "200000",
          "supplyTokenDistributions": [],
        },
      ],
      "supplyCapCents": "200000",
      "supplyCapTokens": "800",
      "type": "core",
    },
  ],
}
`;

exports[`formatToLiquidityHub > includes active supply reward APYs 1`] = `
{
  "liquidityCents": "10000",
  "liquidityTokens": "100",
  "performanceFeePercentage": "0",
  "pricePerShare": "1",
  "redeemFeePercentage": "0",
  "supplierCount": 1,
  "supplyApyPercentage": "5",
  "supplyBalanceCents": "20000",
  "supplyBalanceTokens": "200",
  "supplyCapTokens": "1000",
  "supplyTokenDistributions": [
    {
      "apyPercentage": "1",
      "dailyDistributedTokens": "864",
      "isActive": true,
      "rewardDetails": undefined,
      "token": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
      "type": "venus",
    },
  ],
  "tokenPriceCents": "100",
  "tokenPriceOracleAddress": "0x2000000000000000000000000000000000000001",
  "userSupplyBalanceCents": "10000",
  "userSupplyBalanceTokens": undefined,
  "userSupplyCapTokens": undefined,
  "userVhTokenBalanceTokens": undefined,
  "userVhTokenMaxRedeemTokens": undefined,
  "userWalletBalanceCents": undefined,
  "userWalletBalanceTokens": undefined,
  "userWithdrawCapTokens": undefined,
  "userYearlyEarningsCents": "600",
  "vhToken": {
    "address": "0x1000000000000000000000000000000000000001",
    "chainId": 97,
    "decimals": 18,
    "symbol": "vhUSDC",
    "underlyingToken": {
      "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
      "chainId": 97,
      "decimals": 6,
      "iconSrc": "fake-usdc-asset",
      "symbol": "USDC",
    },
  },
  "withdrawCapTokens": "100",
  "yieldGroups": [],
}
`;

exports[`formatToLiquidityHub > returns zero yearly earnings for an explicit zero user supply balance 1`] = `
{
  "liquidityCents": "10000",
  "liquidityTokens": "100",
  "performanceFeePercentage": "0",
  "pricePerShare": "1",
  "redeemFeePercentage": "0",
  "supplierCount": 1,
  "supplyApyPercentage": "5",
  "supplyBalanceCents": "20000",
  "supplyBalanceTokens": "200",
  "supplyCapTokens": "1000",
  "supplyTokenDistributions": [],
  "tokenPriceCents": "100",
  "tokenPriceOracleAddress": "0x2000000000000000000000000000000000000001",
  "userSupplyBalanceCents": "0",
  "userSupplyBalanceTokens": undefined,
  "userSupplyCapTokens": undefined,
  "userVhTokenBalanceTokens": undefined,
  "userVhTokenMaxRedeemTokens": undefined,
  "userWalletBalanceCents": undefined,
  "userWalletBalanceTokens": undefined,
  "userWithdrawCapTokens": undefined,
  "userYearlyEarningsCents": "0",
  "vhToken": {
    "address": "0x1000000000000000000000000000000000000001",
    "chainId": 97,
    "decimals": 18,
    "symbol": "vhUSDC",
    "underlyingToken": {
      "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
      "chainId": 97,
      "decimals": 6,
      "iconSrc": "fake-usdc-asset",
      "symbol": "USDC",
    },
  },
  "withdrawCapTokens": "100",
  "yieldGroups": [],
}
`;
